@@ -1,3 +1,7 @@
+2004-02-11  Atsushi Enomoto <atsushi@ximian.com>
+
+	* XmlTextWriter.cs, XmlTextWriterOpenElement.cs.
+
 2004-02-10  Atsushi Enomoto <atsushi@ximian.com>
 
 	* XmlNode.cs : ChildNodes should not create XmlNodeListChildren
